scss/_app.scss
/* ... */
.lps-content-home {
	margin-top: 0;
}

// Sidebar content

.sidebar-title {
	color: rgba($shade-2, 0.6);
	font-size: 1.25rem;
	font-weight: $font-weight-normal;
}

.contact-details {
	margin-top: 40px;
}

@media only screen and (min-width: 768px) {
	
	.contact-details {
		margin-top: 0;
	}
}


// Hero Sections
// =============================================

.hero-section {
	position: relative;
}

.hero-title,
.hero-subtitle {
	width: 90%;
}

// h1, h2 content

.hero-title {
	margin-left: auto;
	margin-right: auto;
	font-weight: $font-weight-600;
	max-width: 1000px;
}

h1.hero-title {
	font-size: 36px;
	line-height: 48px;
}

.hero-title {
	font-size: 32px;
	line-height: 38px;
}

// p content

.hero-subtitle {
	margin: auto;
	font-size: 20px;
	line-height: 30px;
}

// hero content

.hero-text {
	padding-top: 2rem;
	padding-bottom: 3rem;
}

// grouped hero content

.hero-group {
	padding: 3rem 0;
}

// hero background image

.hero-image {
	position: relative;
	padding: 10rem 0;
	overflow: hidden;
	background-repeat: no-repeat;
	background-size: cover;
	background-position: center;

	// overlay shadow
	&::before {
		position: absolute;
		top: 0; left: 0; bottom: 0; right: 0;
		content: "";
		width: 100%;
		height: 100%;
		background-image: linear-gradient(rgba($shade-1, 0.4), rgba($shade-1, 0.8));
	}

}

// hero background highlights

.section-highlight {
	background-color: rgba($highlight, 0.2);
}

@media only screen and (max-width: 767px) {

	.hero-image {
		padding: 5rem 0;
	}

}

@media only screen and (min-width: 768px) {

	.hero-title {
		width: 40%;
	}

	.hero-subtitle {
		width: 50%;
	}
}

// Hero Sections

.section-price-search {
	padding: 120px 0;
	background-position: center top;
  background-repeat: no-repeat;
  background-size: cover;
  padding: 100px 0 280px;
}

// Hero Icons

.center-list {
	width: 100%;
	text-align: center;

	li {
		display: inline-block;
		margin-left: 20px;
	}

	li:first-child {
  	margin-left: 0!important;
	}
}

.lips-icons li {
	vertical-align: top;
	display: inline-block;

	.lips-icon {
		color: $brand-primary;
		font-size: 50px;
	}

}

.lips-icons-block {
	padding-bottom: 2rem;;
	border-bottom: 4px dashed $gray-300;
}

.icon-with-text .label {
	margin-top: 8px;
	font-family: $font-family-sans-serif;
	font-size: 14px;
	line-height: 18px;
	font-weight: $font-weight-600;
	text-align: center;
	display: block;
	text-transform: uppercase;
}

@media only screen and (min-width: 768px) {

	.center-list {
		li {
			margin-left: 80px;
		}
	}

	.lips-icons li {
		.lips-icon {
			font-size: 70px;
		}

	}

}


// Callout Features
// =============================================

.callout-title {
	font-size: 20px;
	font-weight: $font-weight-500;
	line-height: 30px;
}

.callout-text {
	font-size: 17px;
	line-height: 25px;
}


// Promotions
// =============================================

.promo {
	margin-bottom: 1rem;
}

.promo-item {
	@include transition(border-color 0.15s ease-in-out);

	&:hover {
		border-color: $brand-primary;
	}

	&:hover .promo-savings {
		background-color: $brand-primary;
	}
}

.promo-savings {
	padding: 10px;
	color: $white;
	background-color: $shade-1;
	@include border-radius($radius-xs $radius-xs 0 0);
}

.promo-img {
	padding-top: 1rem;
}

.promo-title {
	margin-bottom: 0.25rem;
	font-size: 1rem;
}

.promo-details {

	p {
		color: $shade-2;
		font-size: 0.9rem;
	}

	.promo-item-highlight {
		margin: 0;
		color: rgba($shade-2, 0.6);
	}
}

// Card actions

.promo-footer {
	display: table;
	margin-bottom: 1rem;
	width: 100%;

	.promo-footer-left,
	.promo-footer-right {
		display: table-cell;
	}
	
	.promo-footer-left {
		font-size: 0.9rem;
	}

	.promo-footer-right {
		text-align: right;
	}
}

.price-initial {
	text-decoration: line-through;
}

.promo-price {
	color: $brand-primary;
	font-size: 1.5rem;
}


// Search Results
// =============================================
// Use !important to override default rules.

.search-result-item {
	flex: 0 0 100% !important;
	border-radius: 0;
	margin-bottom: -1px !important;

	& + .search-result-item {
		border: $card-border-width solid $card-border-color !important;
	}

	.price {
		color: $brand-primary;
	}

	.btn {
		padding: 0.375rem 1.5rem;
	}

}

.search-result-main {
	width: 100%;
	vertical-align: top;
}

.result-availability {
	white-space: nowrap;
}

.result-item-expiry {
	padding-left: 0.25rem;
	color: $brand-primary;

	&::before {
		display: inline-block;
		margin-right: 4px;
		content: "\e8e8"; // icon-timer
	}
}

@media screen and (max-width: 340px) {

	.result-item-expiry {
		display: block;
		padding: 0;
	}

}


// Content
// =============================================

.lps-table-cart {

	thead {
		th {
			padding-top: 0.25rem;
			color: $text-muted;
			font-size: 0.875rem;
			letter-spacing: 0.05rem;
			text-transform: uppercase;
			border-width: 0 0 2px;
		}
	}
}

// Cart - product row

.cart-item-title {
	line-height: 1.3;
}

.cart-input-qty {
	padding: 0;
	width: 40px;
	text-align: center;
}

// Cart - cost summary

.cart-summary-title {
	margin-bottom: 24px;
	color: $brand-primary;
}

.cart-summary-total {
	margin: 1rem 0;
	padding: 20px;
	background-color: lighten($brand-primary, 45);

	p {
		margin-bottom: 0;
		font-size: 18px;
		font-weight: $font-weight-600;
		line-height: 1;
	}

}

// Cart - form details

.form-hint-inline {
	margin-left: 0.25rem;
}

.form-check-inline {
	margin-right: 1rem;
	
	.form-check-input {
		position: static;
		margin-top: 0;
		margin-right: 0.5rem;
		margin-left: 0;
	}

	.form-check-label {
		padding: 0;
	}

}

.cart-form-details-payment {
	padding: 1.5rem;
	background-color: $gray-100;
}


// Components
// =============================================

// Forms

label {
	font-weight: $font-weight-600;
}
/* ... */

